# cmake-test

./: .gitignore  .gitmodules  CMakeLists.txt  clean.bat  cmake.h.in  config.bat  main.cpp  run.bat  test.bat
Human/: CMakeLists.txt  Human.cpp  Human.h
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
tests/: CMakeLists.txt
tests/graphics/: CMakeLists.txt  tester.cpp
tests/human/: CMakeLists.txt  tester.cpp
